k8s/shanghai/sh-pre-canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: table-search-pre-ingress-canary
  namespace: shpre
  labels:
    ingress-controller: alb
  annotations:
    alb.ingress.kubernetes.io/healthcheck-connect-port: '0'
    alb.ingress.kubernetes.io/healthcheck-enabled: 'true'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '2'
    alb.ingress.kubernetes.io/healthcheck-protocol: TCP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/sticky-session: "true"
    alb.ingress.kubernetes.io/cookie-timeout: "1800"
    alb.ingress.kubernetes.io/backend-keepalive: "true"
    alb.ingress.kubernetes.io/connection-drain-enabled: "true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/canary: 'true'
    alb.ingress.kubernetes.io/canary-by-header: X-Canary
    alb.ingress.kubernetes.io/canary-by-header-value: grey
    alb.ingress.kubernetes.io/order: '1'
spec:
  ingressClassName: alb
  rules:
    - host: table-search.qiewenpre.inner
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: &default-backend
              service:
                name: table-search-pre-service-canary
                port:
                  number: 80
    - host: table-search-pre.qiewenpaper.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: *default-backend
  tls:
    - hosts:
        - table-search-pre.qiewenpaper.com
      secretName: tls-qiewenpaper.com
